[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haxmasDay9_Allenay"
version = "0.0.1"
authors = [
  { name="Yanella", email="yanellaft@gmail.com" },
]
description = "Haxmas Day 9: Advent Calendar"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/YanellaFT/HaxmasDay9"
Issues = "https://github.com/YanellaFT/HaxmasDay9/issues"

[project.scripts]
advent-calendar = "haxmasDay9_Allenay:main”